@@ -1,5 +1,15 @@
-FROM openjdk:11
+FROM eclipse-temurin:11 as jre-build
 
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules java.base \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
+FROM eclipse-temurin:11
 WORKDIR /app
 EXPOSE 8080
 
@@ -11,11 +21,11 @@ ENV JAR_VERSION=${JAR_VERSION}
 ENV IMAGE_VERSION=${IMAGE_VERSION}
 ENV LOGBACK_CONF=${LOGBACK_CONF:-./conf/logback.xml}
 
-COPY ./target/${JAR_NAME}-${JAR_VERSION}-jar-with-dependencies.jar /app/${JAR_NAME}-${JAR_VERSION}.jar
-COPY ./target/${JAR_NAME}-${JAR_VERSION}-sources.jar /app
-COPY ./target/${JAR_NAME}-${JAR_VERSION}-static.tar.gz /app/static.tar.gz
-COPY ./conf/default-config.json /app/conf/
-COPY ./conf/*.xml /app/conf/
+COPY --from=jre-build /javaruntime/target/${JAR_NAME}-${JAR_VERSION}-jar-with-dependencies.jar /app/${JAR_NAME}-${JAR_VERSION}.jar
+COPY --from=jre-build /javaruntime/target/${JAR_NAME}-${JAR_VERSION}-sources.jar /app
+COPY --from=jre-build /javaruntime/target/${JAR_NAME}-${JAR_VERSION}-static.tar.gz /app/static.tar.gz
+COPY --from=jre-build /javaruntime/conf/default-config.json /app/conf/
+COPY --from=jre-build /javaruntime/conf/*.xml /app/conf/
 
 RUN tar xzvf /app/static.tar.gz --no-same-owner --no-same-permissions && rm -f /app/static.tar.gz
 
